fixed padding and pre word wrap

--- a/res/css/default.css
+++ b/res/css/default.css
@@ -39,8 +39,8 @@ header {
   color: var(--text-color);
 }
 
-div .body {
-  margin: 1em;
+div.body {
+  padding: 1em;
 }
 
 a {
@@ -64,4 +64,9 @@ p {
 
 pre {
   font-size: 1.5em;
+  white-space: pre-wrap; /* css-3 */
+  white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+  white-space: -pre-wrap; /* Opera 4-6 */
+  white-space: -o-pre-wrap; /* Opera 7 */
+  word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
